fixed the nav alignment

--- a/css/index.css
+++ b/css/index.css
@@ -106,7 +106,7 @@ section {
 	display: block;
 }
 body {
-	line-height: 1;
+	line-height: 1.5;
 }
 ol,
 ul {
@@ -161,6 +161,7 @@ header {
 	width: 100%;
 	display: flex;
 	margin-bottom: 20px;
+	align-items: baseline;
 }
 
 header nav {
@@ -169,6 +170,7 @@ header nav {
 	justify-content: space-between;
 	padding: 20px 2%;
 	font-size: 14px;
+	margin-top: 10px;
 }
 
 header nav a {
@@ -179,10 +181,6 @@ header nav a {
 header nav a:hover {
 	text-decoration: underline;
 	color: #b0b0b0;
-}
-
-.header-img {
-	max-width: 10000px;
 }
 
 .top-content {
@@ -300,6 +298,14 @@ footer nav a {
 }
 
 /* About.html */
+.about-top-content {
+	display: flex;
+	flex-wrap: wrap;
+	border-bottom: 1px dashed black;
+	margin: 20px 0;
+	padding: 20px;
+}
+
 .about-middle-content {
 	display: flex;
 	flex-wrap: nowrap;
